Refactor RefreshSharedUsersService to improve user details handling and update test assertions for clarity